--- a/ui.css
+++ b/ui.css
@@ -266,3 +266,36 @@ left: 472; top: 75;
   color: white;
   font-size: 0.75em;
 }
+
+/* loot box */
+#lootBox {
+  position: absolute;
+  left: 80; top: 20;
+  width: 537; height: 376;
+  visibility: hidden;
+  background-image: url("art/intrface/loot.png");
+}
+
+/* left loot inventory */
+#lootBoxLeft {
+  position: absolute;
+  left: 180; top: 40;
+  width: 64; height: 290;
+}
+
+/* right loot inventory */
+#lootBoxRight {
+  position: absolute;
+  left: 300; top: 40;
+  width: 64; height: 290;
+}
+
+#lootBoxDoneButton {
+  position: absolute;
+  left: 475; top: 325;
+  width: 26; height: 26;
+  background-image: url("art/intrface/menuup.png");
+}
+
+#lootBoxDoneButton:hover { cursor: pointer; }
+#lootBoxDoneButton:active { background-image: url("art/intrface/menudown.png"); }
