--- a/ui.css
+++ b/ui.css
@@ -2,6 +2,16 @@ body {
   font-family: sans-serif;
 }
 
+.disable-selection {
+    /* disable text selections */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 #game-container {
   position: relative;
   width: 800;
