--- a/ui.css
+++ b/ui.css
@@ -45,7 +45,20 @@ body {
     height: 67;
 }
 
-/*mvepnt.png*/
+#attackButtonAP {
+    position: absolute;
+    bottom: 7; left: 7;
+    width: 64; height: 12;
+    background-image: url("art/intrface/mvepnt.png");
+    background-repeat: no-repeat;
+}
+
+#attackButtonAPDigit {
+    position: absolute;
+    top: 0; left: 20;
+    width: 9; height: 12;
+    background-image: url("art/intrface/mvenum.png");
+}
 
 #attackButtonWeapon {
 }
