--- a/ui.css
+++ b/ui.css
@@ -444,7 +444,7 @@ left: 472; top: 75;
     left: 0; top: 0;
     width: 800; height: 600;
     background-color: black;
-    /*visibility: hidden;*/
+    visibility: hidden;
 }
 
 #worldMapBox {    
