--- a/ui.css
+++ b/ui.css
@@ -904,3 +904,8 @@ left: 472; top: 75;
   font-size: 8pt;
   overflow: hidden;
 }
+
+#saveloadHeader {
+  position: absolute;
+  left: 50; top: 26;
+}
