--- a/ui.css
+++ b/ui.css
@@ -1,5 +1,5 @@
 /*
-Copyright 2014 darkf
+Copyright 2014-2017 darkf
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -18,13 +18,13 @@ limitations under the License.
 
 body {
   font-family: sans-serif;
+  margin: 0;
 }
 
 .disable-selection {
     /* disable text selections */
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
